--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,18 @@
 {
   "extends": [
-    "config:base",
-    "helpers:pinGitHubActionDigests"
+    "config:base"
   ],
   "packageRules": [
     {
-      "packageNames": ["org.mockito:mockito-core"],
-      "schedule": ["on monday"]
+      "matchUpdateTypes": ["major", "minor", "patch", "pin", "digest"],
+      "automerge": true
+    },
+    {
+      "matchDepTypes": ["devDependencies"],
+      "automerge": true
     }
-  ]
+  ],
+  "platformAutomerge": true,
+  "includeForks": true,
+  "dependencyDashboard": true
 }
